Fix bookmarklet bug on Firefox not copying the name

--- a/app/assets/stylesheets/views/tools/bookmarklet.scss
+++ b/app/assets/stylesheets/views/tools/bookmarklet.scss
@@ -56,8 +56,9 @@
         }
       }
 
-      .move{
+      .bookmarklet{
         cursor: move;
+        -moz-user-select: auto;
       }
     }
 
